Fix editor-page scrollbar positioning
Related to fix for #1267

--- a/frontend/src/core/editingOverlay/less/editingOverlay.less
+++ b/frontend/src/core/editingOverlay/less/editingOverlay.less
@@ -6,6 +6,7 @@
     opacity:0;
     width:100%;
     opacity:0;
+    overflow-y: scroll;
 }
 
 .editing-overlay-panel-content {
