--- a/frontend/src/less/pageEditor.less
+++ b/frontend/src/less/pageEditor.less
@@ -74,10 +74,8 @@
         transition: all 0s;
 
         &.add-article {
-            position: absolute;
             background-color:#F6FBFE;
             margin-bottom: 50px;
-            width: 93.5%;
         }
 
         &.add-block {
